# GameEngine

./: CMakeCache.txt  CMakeLists.txt  GameEngine.cpp  GameEngine.h  GamePart.h  GamePartBase.cpp  GamePartBase.h  README.md  cmake_install.cmake  cube2.mtl  main.cpp  sphere.mtl
InputManager/: InputManagerBase.cpp  InputManagerBase.h  InputManagerCaterpillar.cpp  InputManagerCaterpillar.h  TestHandler.cpp  TestHandler.h
Models/: food.mtl  planet.mtl  plupp.mtl
Objects/: Geometry.cpp  Geometry.h  Importer.cpp  Importer.h  MaterialList.h  Object.cpp  Object.h  PhongShadedGeometry.cpp  PhongShadedGeometry.h  PhongShadedObject.cpp  PhongShadedObject.h  Scene.cpp  Scene.h  TextureList.h  TexturedGeometry.cpp  TexturedGeometry.h
Objects/GLMesh/: GLMeshBase.cpp  GLMeshBase.h  GLMeshColour.cpp  GLMeshColour.h  GLMeshTexture.cpp  GLMeshTexture.h  ImportedMesh.cpp  ImportedMesh.h  hashFunction.h
Objects/Materials/: Material.cpp  Material.h
Scenes/: GeometryList.cpp  GeometryList.h  RenderingList.cpp  RenderingList.h  Scene.cpp  Scene.h  SceneGeometries.cpp  SceneGeometries.h  ShaderProgramList.cpp  ShaderProgramList.h  TestScene.cpp  TestScene.h
Scenes/GameScenes/: CaterpillarScene.cpp  CaterpillarScene.h  TestScene.cpp  TestScene.h
Shading/: PhongShader.cpp  PhongShader.h  ShaderLoader.cpp  ShaderLoader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramBase.cpp  ShaderProgramBase.h  TexturePhongShader.cpp  TexturePhongShader.h
Shading/Shaders/: phongSunTexture.frag  phongSunTexture.vert
WindowHandling/: GLContext.cpp  GLContext.h  GLwindow.cpp  GLwindow.h
(+10 files in other folders)
